[package]
name = "dns-over-https-proxy"
version = "0.1.0"
authors = ["Michael Farrell <micolous+git@gmail.com>"]
license = "Apache-2.0"
description = "Simple DNS to HTTPS proxy for Google Public DNS."
repository = "https://github.com/micolous/dns-over-https-proxy"

[dependencies]
reqwest = "0.8.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.3"
domain = "0.2"
log = "0.3"
env_logger = "0.3"
